# Celestial-Chess

./: .gitattributes  .gitignore  README.md  Untitled Diagram.drawio  ai_algorithm.py  app.py  chess_game.py  create_ico.py  pyproject.toml  readme.md  run.py  setup.py  test.ipynb  train_pipline.ipynb  utils_backend.py
ai/: __init__.py  ai_algorithm.py  chess_ai_model.pth  deeplearning.py  evaluate_ai.py  mcts.py  minimax.py  model_score.json  monky.py  test_ai.py  train_ai.ipynb  train_ai.py
backend/: __init__.py  app_factory.py  game_session.py  http_routes.py  session_utils.py  socket_events.py
cc_ai/: ai_algorithm.py  deeplearning.py  evaluate_ai.py  mcts.py  minimax.py  model_score.json  monky.py
cc_game/: chess_game.py  chess_game_env.py
cc_tools/: custom_deepcopy.py
celestial_chess.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: test_ai.ipynb  test_api.py
experiments/: compare_func_speed.ipynb  evaluate_speed.py  reinforce_test.py  try_nn.py  try_to_use_nn.ipynb
game/: chess_game.py  chess_game_env.py  tools_func.py
profile/: profile_mcts()(06-20-10-41).prof  profile_mcts()(06-21-13-34).prof  profile_mcts()(06-21-13-39).prof  profile_mcts(06-21-18-00).prof  profile_mcts(06-22-10-10).prof  profile_mcts(06-22-13-22).prof  profile_mcts(06-24-10-09).prof  profile_mcts(07-08-14-11).prof  profile_mcts(07-08-16-18).prof  profile_minimax()(06-20-00-23).prof  profile_minimax()(06-20-00-29).prof  profile_minimax(07-09-15-53).prof  profile_minimax(07-09-15-55).prof  profile_minimax(07-09-15-57).prof  profile_minimax(07-09-16-07).prof  (+14 more)
(+153 files in other folders)
