[project]
name = "celestial-chess"
version = "0.1.0"
description = "Minimal dependencies for Celestial-Chess"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "flask-socketio",
    "numpy",
    "numba",
    "torch",
    "celestialflow",
    "loguru"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
