[project]
name = "celestial-chess"
version = "1.5.0"
description = "Minimal dependencies for Celestial-Chess"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "flask-socketio",
    "gymnasium",
    "numpy",
    "numba",
    "snakeviz",
    "torch",
    "celestialflow",
    "loguru"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

